# django-translated-fields

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.rst  biome.json  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
docs/: conf.py
tests/: cov.sh  manage.py
tests/testapp/: admin.py  custom_fields.py  field_types_models.py  models.py  settings.py  test_custom_field_debug.py  test_custom_fields.py  test_field_types.py  test_fields.py  urls.py
tests/testapp/locale/de/LC_MESSAGES/: django.mo  django.po
translated_fields/: __init__.py  admin.py  fields.py  utils.py
